# libtriton_jit

./: .dockerignore  CMakeLists.txt
.github/workflows/: build-deb.yml  build-packages.yml  build-rpm.yml  upload-nexus.yml
examples/: CMakeLists.txt
examples/arg_handle/: axpy_op.cpp
examples/pointwise/: CMakeLists.txt  add_op.cpp  add_op.h  add_triton_cpp_rt.py  test_add.cpp
include/triton_jit/: jit_utils.h  triton_jit_function.h  triton_kernel.h
packaging/: README.md
packaging/debian/: Dockerfile.deb  changelog  control  copyright  libtriton-jit-dev.install  libtriton-jit.install  rules
packaging/debian/build-helpers/: build-libtriton-jit.sh
packaging/rpm/: Dockerfile.rpm  build-rpm.sh  libtriton-jit.spec
scripts/: standalone_compile.py
src/: CMakeLists.txt  triton_jit_function.cpp
